package proto;

option java_package = "com.lvl6.pictures.noneventprotos";
option java_outer_classname = "PicturesEventProtocolProto";

enum PicturesEventProtocolRequest {
	//numbering should start at 1000
	C_LOGIN_EVENT = 1000;	
}

enum PicturesEventProtocolResponse {
	//numbering should start at 1000
	S_LOGIN_EVENT = 1000;
}